--- a/nab.css
+++ b/nab.css
@@ -3,6 +3,7 @@ body{
    
         user-select: none;
         overflow-x: hidden;
+        scroll-snap-type: y;
 }
 .navbar-brand{
     font-weight: bolder;
